couleur et dangerosite doc fait
