# back/api/routes/couleur.js
@@ -42,13 +42,17 @@ module.exports = () => {
     });
 
     //modification de la couleurs
-    router.put('/:id', async(req, res) => {
+    router.put('/', (req, res) => {
         models.Couleur.update(req.body, {
-            where : {
-                id: req.params.id
+            where: {
+                id: req.body.id
             }
+        }).then((response) => {
+            console.log(response);
+            res.status(200).send(true);
+        }).catch((error) => {
+            res.status(500).send(error);
         });
-        res.status(200).send(true);
     });
     
 
